--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
